[gd_scene load_steps=21 format=3 uid="uid://vdedjycwlrvc"]

[ext_resource type="Script" uid="uid://damvy8kt8ejcu" path="res://Scripts/audio_manager.gd" id="1_nieg5"]
[ext_resource type="Texture2D" uid="uid://dse4pmnhral66" path="res://Assets/Loading/Yes_botton1.png" id="2_f486g"]
[ext_resource type="FontFile" uid="uid://2xexbg02phv6" path="res://Fonts/Bold Display.ttf" id="2_v1nn3"]
[ext_resource type="Texture2D" uid="uid://tqrb37nnuh8g" path="res://Assets/Loading/yes_pressed1.png" id="3_e5o4r"]
[ext_resource type="Texture2D" uid="uid://dr0l2bxdjoens" path="res://Assets/Loading/yes_pressed2.png" id="4_i5vmv"]
[ext_resource type="Texture2D" uid="uid://beh6wln25qik0" path="res://Assets/Loading/yes_pressed3.png" id="5_424g7"]
[ext_resource type="Texture2D" uid="uid://dqmuujub8df3t" path="res://Assets/Loading/No_botton1.png" id="5_i5vmv"]
[ext_resource type="Texture2D" uid="uid://bs8sfcn34n0w2" path="res://Scripts/audio_button_updated.tres" id="6_e5o4r"]
[ext_resource type="Texture2D" uid="uid://dfjrx2gwul5rp" path="res://Assets/Loading/no_pressed1.png" id="8_2b8qs"]
[ext_resource type="Texture2D" uid="uid://c8w4p5p0tdb64" path="res://Assets/Loading/no_pressed2.png" id="9_rjoy8"]
[ext_resource type="Texture2D" uid="uid://clmhbjlheknuk" path="res://Assets/Loading/no_pressed3.png" id="10_x4j36"]
[ext_resource type="Texture2D" uid="uid://b5avcfxhxyvdy" path="res://Assets/Loading/no_hovered1.png" id="11_b843h"]
[ext_resource type="Texture2D" uid="uid://b0r5qe4kfgmj" path="res://Assets/Loading/no_hovered2.png" id="12_n0sgq"]
[ext_resource type="Texture2D" uid="uid://bxbhynghjiine" path="res://Assets/Loading/no_hovered3.png" id="13_7e8ps"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_i5vmv"]
frames = 4
frame_0/texture = ExtResource("3_e5o4r")
frame_0/duration = 0.3
frame_1/texture = ExtResource("4_i5vmv")
frame_1/duration = 0.3
frame_2/texture = ExtResource("5_424g7")
frame_2/duration = 0.2
frame_3/texture = ExtResource("4_i5vmv")
frame_3/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_fa3kc"]
frames = 4
frame_0/texture = ExtResource("8_2b8qs")
frame_0/duration = 0.3
frame_1/texture = ExtResource("9_rjoy8")
frame_1/duration = 0.3
frame_2/texture = ExtResource("10_x4j36")
frame_2/duration = 0.2
frame_3/texture = ExtResource("9_rjoy8")
frame_3/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_m2eun"]
frames = 4
frame_0/texture = ExtResource("11_b843h")
frame_0/duration = 0.3
frame_1/texture = ExtResource("12_n0sgq")
frame_1/duration = 0.3
frame_2/texture = ExtResource("13_7e8ps")
frame_2/duration = 0.2
frame_3/texture = ExtResource("12_n0sgq")
frame_3/duration = 0.3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63ls6"]
bg_color = Color(0.635294, 0.627451, 0.454902, 1)
expand_margin_left = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c010p"]
bg_color = Color(1, 0.94902, 0.768627, 1)
expand_margin_left = 8.0

[sub_resource type="Theme" id="Theme_71bew"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_63ls6")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_63ls6")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_63ls6")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_c010p")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_c010p")

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_nieg5")
metadata/_edit_horizontal_guides_ = [465.0]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.94902, 0.768627, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -24.0
offset_right = 52.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Button" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Button2")
mouse_default_cursor_shape = 2
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("2_f486g")
texture_pressed = SubResource("AnimatedTexture_i5vmv")
texture_hover = ExtResource("6_e5o4r")

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Button")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_i5vmv")
texture_pressed = SubResource("AnimatedTexture_fa3kc")
texture_hover = SubResource("AnimatedTexture_m2eun")

[node name="Label" type="RichTextLabel" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.0
offset_top = -204.0
offset_right = 490.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_71bew")
theme_override_colors/default_color = Color(0.588235, 0.603922, 0.423529, 1)
theme_override_constants/line_separation = 28
theme_override_fonts/normal_font = ExtResource("2_v1nn3")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "[center]Hello there! 
Would you like the sound on?[/center]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button2" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
